--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,34 +6,34 @@
 
     <application
         android:allowBackup="true"
-        android:theme="@android:style/Theme.Holo.Light"
         android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name" >
-
+        android:label="@string/app_name"
+        android:theme="@android:style/Theme.Holo.Light" >
         <activity
             android:name=".SplashActivity"
             android:label="@string/title_activity_splash" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".HomeScreen"
             android:label="@string/title_activity_home_screen" >
         </activity>
-
         <activity
             android:name=".Medium_Level"
             android:label="@string/app_name" >
         </activity>
-
         <activity
             android:name=".HardLevel"
             android:label="@string/title_activity_hard_level" >
         </activity>
-
+        <activity
+            android:name=".Easy_Level"
+            android:label="@string/title_activity_easy__level" >
+        </activity>
     </application>
 
 </manifest>
