--- a/keyboardscrambler/src/main/AndroidManifest.xml
+++ b/keyboardscrambler/src/main/AndroidManifest.xml
@@ -14,6 +14,7 @@
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -32,6 +33,10 @@
         <activity
             android:name=".Easy_Level"
             android:label="@string/title_activity_easy__level" >
+        </activity>
+        <activity
+            android:name=".Dvorak_Level"
+            android:label="@string/title_activity_dvorak__level" >
         </activity>
     </application>
 
